force-app/main/default/objects/Opportunity/fields/Acceptable_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acceptable Proposal</label>
    <type>Checkbox</type>
</CustomField>