force-app/main/default/objects/Opportunity/fields/Ag_ncia__c.field-meta.xml
<CustomField>
    <fullName>Ag_ncia__c</fullName>
    <label>Agência</label>
    <length>200</length>
    <type>Text</type>
</CustomField>