force-app/main/default/objects/Opportunity/fields/Answered_Confirmation_Form__c.field-meta.xml
<CustomField>
    <fullName>Answered_Confirmation_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answered Confirmation Form</label>
    <type>Checkbox</type>
</CustomField>