force-app/main/default/objects/Opportunity/fields/Antecipation__c.field-meta.xml
<CustomField>
    <fullName>Antecipation__c</fullName>
    <label>Anticipation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>Não</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>