force-app/main/default/objects/Opportunity/fields/Antecipation_Frequency_2__c.field-meta.xml
<CustomField>
    <fullName>Antecipation_Frequency_2__c</fullName>
    <label>Anticipation Frequency 2°</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Settlement_Frequency_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Bimonthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Fluxo Médio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>