force-app/main/default/objects/Opportunity/fields/AntecipationFrequency__c.field-meta.xml
<CustomField>
    <fullName>AntecipationFrequency__c</fullName>
    <label>Anticipation Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AntecipationFrequency</valueSetName>
    </valueSet>
</CustomField>