force-app/main/default/objects/Opportunity/fields/ApplePay__c.field-meta.xml
<CustomField>
    <fullName>ApplePay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apple Pay</label>
    <type>Checkbox</type>
</CustomField>