force-app/main/default/objects/Opportunity/fields/Atendimento_por_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Atendimento_por_Whatsapp__c</fullName>
    <description>Prefere atendimento por whatsapp?</description>
    <inlineHelpText>Canal de atendimento preferente</inlineHelpText>
    <label>Atendimento por Whatsapp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>