force-app/main/default/objects/Opportunity/fields/AverageSalesTicket__c.field-meta.xml
<CustomField>
    <fullName>AverageSalesTicket__c</fullName>
    <inlineHelpText>Average Order Value</inlineHelpText>
    <label>Average Order Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>