force-app/main/default/objects/Opportunity/fields/B2B_Business_to_Business__c.field-meta.xml
<CustomField>
    <fullName>B2B_Business_to_Business__c</fullName>
    <label>B2B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>