force-app/main/default/objects/Opportunity/fields/BusinessModel__c.field-meta.xml
<CustomField>
    <fullName>BusinessModel__c</fullName>
    <label>Desired Business Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessModel</valueSetName>
    </valueSet>
</CustomField>