force-app/main/default/objects/Opportunity/fields/BusinessModelType__c.field-meta.xml
<CustomField>
    <fullName>BusinessModelType__c</fullName>
    <label>Business Model Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessModelType</valueSetName>
    </valueSet>
</CustomField>