force-app/main/default/objects/Opportunity/fields/Can_Edit_Fields__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Edit Fields</label>
    <type>Checkbox</type>
</CustomField>