force-app/main/default/objects/Opportunity/fields/Can_Edit_Fields_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit_Fields_Discovery__c</fullName>
    <formula>NOT(
OR(
ISPICKVAL(StageName, &quot;Negotiation&quot;),
ISPICKVAL(StageName, &quot;Compliance&quot;),
ISPICKVAL(StageName, &quot;Contract&quot;),
ISPICKVAL(StageName, &quot;Homologation&quot;),
ISPICKVAL(StageName, &quot;Go Live&quot;),
ISPICKVAL(StageName, &quot;Frozen&quot;),
ISPICKVAL(StageName, &quot;Processing&quot;),
ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISPICKVAL(StageName, &quot;Closed Terminated&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Edit Fields Discovery</label>
    <type>Checkbox</type>
</CustomField>