force-app/main/default/objects/Opportunity/fields/Can_Ready_Only_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Can_Ready_Only_Compliance__c</fullName>
    <formula>OR(
    ISPICKVAL(StageName, &quot;Compliance&quot;),
    ISPICKVAL(StageName, &quot;Contract&quot;),
    ISPICKVAL(StageName, &quot;Homologation&quot;),
    ISPICKVAL(StageName, &quot;Go Live&quot;),
    ISPICKVAL(StageName, &quot;Frozen&quot;),
    ISPICKVAL(StageName, &quot;Processing&quot;),
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISPICKVAL(StageName, &quot;Closed Terminated&quot;)
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Ready Only Compliance</label>
    <type>Checkbox</type>
</CustomField>