force-app/main/default/objects/Opportunity/fields/Can_View_Documents__c.field-meta.xml
<CustomField>
    <fullName>Can_View_Documents__c</fullName>
    <description>Retorna &apos;True&apos; caso o usuário seja system admin ou tenha a permissão para visualizar documentos (notes &amp; attachements)</description>
    <formula>OR(
  $Profile.Name = &quot;System Administrator&quot;,
  $Permission.Can_View_Documents
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can View Documents</label>
    <type>Checkbox</type>
</CustomField>