force-app/main/default/objects/Opportunity/fields/Cartao_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Cartao_de_Credito__c</fullName>
    <label>Cartão de Crédito (Opcionais)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parcelado</fullName>
            </value>
            <value>
                <fullName>Recorrente/Assinatura</fullName>
            </value>
            <value>
                <fullName>Pagamento com 1 Click</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>