force-app/main/default/objects/Opportunity/fields/Chargeback__c.field-meta.xml
<CustomField>
    <fullName>Chargeback__c</fullName>
    <label>Taxa de Chargeback Atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>