force-app/main/default/objects/Opportunity/fields/Closed_By_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed by compliance</label>
    <type>Checkbox</type>
</CustomField>