force-app/main/default/objects/Opportunity/fields/ClosureStatusDate__c.field-meta.xml
<CustomField>
    <fullName>ClosureStatusDate__c</fullName>
    <label>Closure Status Date</label>
    <type>Date</type>
</CustomField>