force-app/main/default/objects/Opportunity/fields/Contract_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_File_Id__c</fullName>
    <label>Contract File Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>