force-app/main/default/objects/Opportunity/fields/Contract_Start_Fee_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Fee_Date__c</fullName>
    <description>Data inicial para cobrança da taxa mínima do Contrato</description>
    <label>Contract Start Fee Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>