force-app/main/default/objects/Opportunity/fields/Conversa_de_WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>Conversa_de_WhatsApp__c</fullName>
    <label>Conversa de WhatsApp</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>