force-app/main/default/objects/Opportunity/fields/Current_Platform__c.field-meta.xml
<CustomField>
    <fullName>Current_Platform__c</fullName>
    <inlineHelpText>Current Platform</inlineHelpText>
    <label>Current Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Woocommerce</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>Vtex</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Nuvemshop</fullName>
            </value>
            <value>
                <fullName>Loja Integrada</fullName>
            </value>
            <value>
                <fullName>Tray</fullName>
            </value>
            <value>
                <fullName>Baggy</fullName>
            </value>
            <value>
                <fullName>Vnda</fullName>
            </value>
            <value>
                <fullName>Linx Commerce</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>InHouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>