force-app/main/default/objects/Opportunity/fields/Data_de_indicacao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_indicacao__c</fullName>
    <description>Lead referral date</description>
    <inlineHelpText>Lead referral date</inlineHelpText>
    <label>Referral date</label>
    <type>Date</type>
</CustomField>