force-app/main/default/objects/Opportunity/fields/DataAgendamento__c.field-meta.xml
<CustomField>
    <fullName>DataAgendamento__c</fullName>
    <label>Data de agendamento</label>
    <type>Date</type>
</CustomField>