force-app/main/default/objects/Opportunity/fields/DataConversaoProcessing__c.field-meta.xml
<CustomField>
    <fullName>DataConversaoProcessing__c</fullName>
    <label>Processing Date</label>
    <type>Date</type>
</CustomField>