force-app/main/default/objects/Opportunity/fields/DataCriacaoLead__c.field-meta.xml
<CustomField>
    <fullName>DataCriacaoLead__c</fullName>
    <label>Data de criação do lead</label>
    <type>Date</type>
</CustomField>