force-app/main/default/objects/Opportunity/fields/Date_Discovery_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_Discovery_Meeting__c</fullName>
    <label>Discovery Meeting Date</label>
    <type>Date</type>
</CustomField>