force-app/main/default/objects/Opportunity/fields/Date_of_First_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Review__c</fullName>
    <label>Date of First Review</label>
    <length>10</length>
    <type>Text</type>
</CustomField>