force-app/main/default/objects/Opportunity/fields/DateAccountCreation__c.field-meta.xml
<CustomField>
    <fullName>DateAccountCreation__c</fullName>
    <description>Date for Account Creation</description>
    <inlineHelpText>Date for Account Creation</inlineHelpText>
    <label>Date Account Creation</label>
    <type>Date</type>
</CustomField>