force-app/main/default/objects/Opportunity/fields/Descricao_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Descricao_Empresa__c</fullName>
    <label>Descrição Detalhada do Produto/Serviço</label>
    <type>TextArea</type>
</CustomField>