force-app/main/default/objects/Opportunity/fields/DisableAgency__c.field-meta.xml
<CustomField>
    <fullName>DisableAgency__c</fullName>
    <description>Campo para ser usado para não mostrar na criação do record</description>
    <formula>if(AND(RecordType.DeveloperName =&apos;Crossborder&apos;,  Id == null),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disable Agency</label>
    <type>Checkbox</type>
</CustomField>