force-app/main/default/objects/Opportunity/fields/DuracaoOportunidade__c.field-meta.xml
<CustomField>
    <fullName>DuracaoOportunidade__c</fullName>
    <formula>DataConversaoProcessing__c - LeadCreationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duração da oportunidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>