force-app/main/default/objects/Opportunity/fields/First_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>First_Appointment_Status__c</fullName>
    <label>First Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>No-show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>