force-app/main/default/objects/Opportunity/fields/GooglePay__c.field-meta.xml
<CustomField>
    <fullName>GooglePay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Google Pay</label>
    <type>Checkbox</type>
</CustomField>