force-app/main/default/objects/Opportunity/fields/Has_Synced_Quote__c.field-meta.xml
<CustomField>
    <fullName>Has_Synced_Quote__c</fullName>
    <formula>NOT(ISBLANK(SyncedQuote.Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Synced Quote</label>
    <type>Checkbox</type>
</CustomField>