force-app/main/default/objects/Opportunity/fields/Hibernate__c.field-meta.xml
<CustomField>
    <fullName>Hibernate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hibernate</label>
    <type>Checkbox</type>
</CustomField>