force-app/main/default/objects/Opportunity/fields/Homologation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Homologation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Homologation Completed: Settings Form</label>
    <type>Checkbox</type>
</CustomField>